added subscription feature to external amenities system
