# System_BE/Swagger/swagger-output.json
@@ -193,6 +193,16 @@
           }
         }
       }
+    },
+    "/amenities/notification": {
+      "get": {
+        "description": "This endpoint is called when the amenities are updated",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
     }
   },
   "components": {
