# System_BE/src/Routers/AmenitiesRouter.ts
@@ -143,4 +143,23 @@ amenitiesRouter.post("/filter", async (req, res) => {
   res.json(filteredAmenities);
 })
 
+//date-time formatter
+const formatter: Intl.DateTimeFormat = new Intl.DateTimeFormat("en-US", {
+  hour12: false, 
+  year: "2-digit", 
+  month: "2-digit", 
+  day: "2-digit", 
+  hour: "2-digit", 
+  minute: "2-digit", 
+  second: "2-digit", 
+});
+
+/*
+ * function called when the amenities are updated
+ */
+amenitiesRouter.get("/notification", async (req, res) => {
+  // #swagger.description = 'This endpoint is called when the amenities are updated'
+  console.log("[" + formatter.format(Date.now()) + "] " + "Amenities update notification received");
+})
+
 export default amenitiesRouter;
